- Create multiple items dialog; sometimes, for custom modules, no fields are displayed. Now, all enabled and editable fields are displayed. 
- Item form settings; sometimes it does not show any fields available for assignment.
- UI scaling session can get lost when switching between user folders.
- Filter dialog shows value field for is filled / is empty operator when switching between fields.

[Main things TODO]
- Image sizes - maximum image size
- Store images to temp folder for online searches to prevent high memory usage (byte[] stored in memory)


--------------------------------------------------------------------
Data Crow version 4.9.1                       Released on 2023-06-08
--------------------------------------------------------------------
Many thanks to Ariel Chyłek for all the translation work and to SandBird for the extensive testing.

[Fixed]
- Issue with self referencing items; right-click menu not showing in view for referenced item.
- Fixed an issue where quick search is not working when the item holds a reference to an item of module with having the first numeric field set as descriptive.
- Settings not saved on exit when Data Crow asks for a restart.
- When an item has a self referencing field it caused the item form to always say there are unsaved changes regardless of having made changes.
- Values present in self referencing fields were exported to XML with their ID only.
- Item was able to referencing itself. This causes all kinds of issues; now, when trying to save an item that references itself, the system will prevent you from doing so. Note that it was not possible to filter them from the various fields, this would trigger a rewrite of the way fields are generated. Maybe something for later. The upgrade will remove self referencing values if present (silently).
- Custom property modules can now be deleted, also when they have not yet been assigned to a reference(s) field.
- Reference drop-down not sorted per the user settings.