@@ -10,7 +10,7 @@
     <artifactId>datacrow-services</artifactId>
     <name>Datacrow services</name>
     <packaging>jar</packaging>
-    <version>1.9.0</version>
+    <version>1.10.0</version>
     
     <dependencies>
         <dependency>
