@@ -23,6 +23,9 @@ Data Crow version 4.10                        Released on 2023-08-xx
 - Item form settings; sometimes it does not show any fields available for assignment.
 - UI scaling session can get lost when switching between user folders.
 - Filter dialog shows value field for is filled / is empty operator when switching between fields.
+- OpenLibrary search: edition data mix up (sometimes) causing incorrect results
+- OpenLibrary search: language not imported when searching on ISBN
+- OpenLibrary search: ISBN10 and ISBN13 should always be filled but are sometimes blank
 
 [Main things TODO]
 - Image sizes - maximum image size
